manifests/services/owncloud/00-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
  namespace: owncloud
  labels:
    environment: extern
    app: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
      annotations:
        linkerd.io/inject: disabled
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
              weight: 100
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - owncloud-db
                topologyKey: topology.kubernetes.io/hostname
              weight: 100
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: owncloud-data
      containers:
        - name: owncloud
          image: owncloud/server:11.0
          volumeMounts:
            - name: data
              mountPath: /mnt/data
          ports:
            - containerPort: 8080
              name: web
          resources:
            requests:
              memory: "170Mi"
              cpu: "20m"
            #limits:
            #  memory: "300Mi"
            #  cpu: "30m"
