manifests/services/owncloud/00-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owncloud
  namespace: owncloud
  labels:
    environment: extern
    app.kubernetes.io/instance: owncloud
    app: owncloud
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 400m
    hajimari.io/enable: "true"
    hajimari.io/icon: "cloud"
spec:
  tls:
    - hosts:
        - ocloud.domain.tld
  rules:
    - host: ocloud.domain.tld
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: owncloud
                port:
                  number: 8088
